# loftgaedi-api

./: Makefile  pyproject.toml  requirements.txt  scrape-locations.py
loftgaedi/: crud.py  database.py  main.py  models.py  schemas.py  scrape.py
tests/: test_books.py
