[tool.poetry]
name = "loftgaedi"
version = "0.1.0"
description = ""
authors = ["Jökull Sólberg Auðunsson <jokull@solberg.is>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.44.0"
uvicorn = "^0.10.8"
itsdangerous = "^1.1"
requests = "^2.22"
psycopg2 = "^2.8"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^19.3b0", allows-prereleases = true}
pylint = "^2.4"
flake8 = "^3.7"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
